# knowledge-graph

./: .env.example  pyproject.toml
src/: data.js  graph_data.pkl  script.ipynb
