[project]
name = "kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.74",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.9",
    "langchain-neo4j>=0.5.0",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.55.2",
]
